--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <!-- un div  de tipo fila (row) con un textarea -->
         <div class="row">
           <textarea name="" id="texto" rows="8"></textarea>
+          <input type="text" id="enlaceURL" placeholder="Escriba aqui la URL">
         </div>
         <!-- un div  de tipo fila (row) con un input de tipo file -->
         <div class="row">
